<resources>
    <string name="app_name">Alenkin Ogorod</string>
    <string name="alenka_logo_image">alenka Logo Image</string>
    <string name="login_button">Войти</string>
    <string name="guest_login">Гостевой вход</string>
    <string name="register">Регистрация</string>
    <string name="hint_name">Введите ваше имя:</string>
    <string name="hint_password">Введите ваш пароль</string>
    <string name="alenka_phrase">Пройдемте в сад? Я покажу вас розам.\n<font size="20">Алёнкин Огород</font>\n\n\n\n\n\n</string>
    <string name="our_site">Наш Сайт</string>
    <string name="our_site_text">Для всех увлеченных садоводов и огородников, новичков и профи! С возможностями общения и обмена опытом с другими участниками, размещения фотографий и видео.</string>
    <string name="in_calendar">В разделе Календарь</string>
    <string name="in_calendar_text">Можно получить совет, что в данный день лучше делать: садить, сеять, подкармливать, пересаживать, прививать, поливать, пикировать, отдыхать. В нем предоставлены сведения о влиянии Луны и знаков Зодиака на рост и развитие растений.</string>
    <string name="in_wiki">В разделе Энциклопедия</string>
    <string name="in_wiki_text">Можно найти самую исчерпывающую информацию по выращиванию овощных и садовых культур, фруктовых деревьев и кустарников, цветов и декоративных растений. Здесь есть все, что нужно знать для получения высоких урожаев: подробные инструкции по выращиванию каждой культуры с рекомендациями по посадке, подкормке, подвязке, защите от холодов и хранению урожая; описание наиболее эффективных средств борьбы с вредителями и болезнями; характеристика полезных свойств растений и плодов, советы по их употреблению.</string>
    <string name="in_favorites">В разделе Избранное</string>
    <string name="in_favorites_text">Вы сможете получать напоминание о необходимых работах, делать заметки, хранить фотографии, видео.</string>
    <string name="we_know"><font size="20">Мы знаем \nкак увеличить Ваш урожай!</font></string>
    <string name="we_garantee">Мы гарантируем, что Ваш огород станет предметом Вашей гордости!</string>
    <string name="together">Вместе мы вырастим отличный урожай!</string>
    <string name="comfort">Удобство использования</string>
    <string name="comfort_text">Интересные и нужные материалы для чтения и просмотра</string>
    <string name="moon_calendar">Актуальный лунный календарь </string>
    <string name="moon_calendar_text">Перечень сезонных работ с января по декабрь</string>
    <string name="questions_answers">Рубрика Вопрос-ответ</string>
    <string name="questions_answers_text">Быстрые и точные ответы, личные лайфхаки и подсказки</string>
    <string name="email">Введите ваш email:</string>
    <string name="our_garden_picture">Our garden picture</string>
    <string name="personal_info">Персональная информация</string>
    <string name="place_photo">Разместить фото</string>
    <string name="make_post">Оставить сообщение</string>
    <string name="our_garden">Наш сад изображение</string>
    <string name="our_calendar">Календарь изображение</string>
    <string name="our_wiki">Wiki изображение</string>
    <string name="our_note">Note изображение</string>
</resources>