<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/mainScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/mainContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/relativelayout"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/imageViewAlenkalogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/alenka_logo_image"
                    app:srcCompat="@drawable/alenka" />

                <TextView
                    android:id="@+id/textViewTopAlenka"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_alignParentBottom="true"

                    android:gravity="center"
                    android:text="@string/alenka_phrase"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </RelativeLayout>


            <EditText
                android:id="@+id/editTextLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/hint_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:background="@color/yellow"
                android:onClick="onClickEnter"
                android:text="@string/login_button" />

            <Button
                android:id="@+id/buttonGuestLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@color/green_dark"
                android:onClick="onClickGuestEnter"
                android:text="@string/guest_login" />

            <TextView
                android:id="@+id/textViewRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:onClick="onClickRegister"
                android:text="@string/register" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>